--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/*General Purpose Container*/
 .container {
     color:black;
     font-family: "Times New Roman";
@@ -88,4 +89,17 @@
 .contact {
     padding:12px;
     margin: 20px 0px 20px 0px;
+}
+
+/*Calendar*/
+.calendar_icon {
+    width:200px;
+    height:50px;
+    text-align: right;
+}
+
+/*Icon div*/
+.i_div {
+    float:left;
+    margin: 15px 7px 10px 5px;
 }
