--- a/styles.css
+++ b/styles.css
@@ -1,42 +1,9 @@
 /*Pictures on home page*/
-.picture_div {
-    position:relative;
-    width:475px;
-    height:300px;
-    display:inline-block;
-    margin:10px;
-}
-
-.pic {
-    position:relative;
-    width:475px;
-    height:300px;
-    border:solid black 2px;
-}
-
-/*Projects*/
-.project_pic {
-    position:relative;
-    left:0px;
-    width:475px;
-    height:300px;
-    float:left;
-    margin:0 50px 0 0;
-    border:solid black 2px;
-}
-
-.project_div {
-    background:rgba(169,169,169,0.79);
-    border: solid black 3px;
-    padding:30px;
-    height:400px;
-    margin:30px 0 30px;
-}
-
-.project_content_div {
-    padding:5px;
-    margin:10px 0px 10px 500px;
-    padding:10px;
-    border:solid black 3px;
-    background-color:white;
+.centered_img {
+  margin-left: auto;
+  margin-right: auto;
+  height: 90%;
+  width: 90%;
+  display: block;
+  padding: 1rem;
 }
